.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:16:17 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘printEnv’:
../src/HW1.c:43:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("- ",env[j][k]);
     ^
../src/HW1.c:45:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("X ",env[j][k]);
     ^
../src/HW1.c:47:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("P ",env[j][k]);
     ^
../src/HW1.c:49:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("H ",env[j][k]);
     ^
../src/HW1.c: In function ‘findNearestMove’:
../src/HW1.c:282:8: warning: unused variable ‘k’ [-Wunused-variable]
  int j,k;
        ^
../src/HW1.c:282:6: warning: unused variable ‘j’ [-Wunused-variable]
  int j,k;
      ^
../src/HW1.c: In function ‘runHunterPlan’:
../src/HW1.c:433:10: warning: unused variable ‘l’ [-Wunused-variable]
  int j,k,l;
          ^
../src/HW1.c: In function ‘main’:
../src/HW1.c:1017:2: warning: statement with no effect [-Wunused-value]
  env;
  ^
../src/HW1.c: At top level:
../src/HW1.c:16:12: warning: ‘UP’ defined but not used [-Wunused-variable]
 static int UP = 5;
            ^
../src/HW1.c:17:12: warning: ‘LEFT’ defined but not used [-Wunused-variable]
 static int LEFT = 6;
            ^
../src/HW1.c:18:12: warning: ‘DOWN’ defined but not used [-Wunused-variable]
 static int DOWN = 7;
            ^
../src/HW1.c:19:12: warning: ‘RIGHT’ defined but not used [-Wunused-variable]
 static int RIGHT = 8;
            ^
../src/HW1.c:20:12: warning: ‘STAY_STILL’ defined but not used [-Wunused-variable]
 static int STAY_STILL = 9;
            ^
Finished building: ../src/HW1.c
 
Building target: HW1
Invoking: GCC C Linker
gcc  -o "HW1"  ./src/HW1.o   
Finished building target: HW1
 
21:16:21 **** Incremental Build of configuration Debug for project HW1 ****
make all 
make: Nothing to be done for `all'.
21:16:45 **** Incremental Build of configuration Debug for project HW1 ****
make all 
make: Nothing to be done for `all'.
21:16:47 **** Incremental Build of configuration Debug for project HW1 ****
make all 
make: Nothing to be done for `all'.
21:16:58 **** Incremental Build of configuration Debug for project HW1 ****
make all 
make: Nothing to be done for `all'.
21:17:51 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘printEnv’:
../src/HW1.c:43:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("- ",env[j][k]);
     ^
../src/HW1.c:45:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("X ",env[j][k]);
     ^
../src/HW1.c:47:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("P ",env[j][k]);
     ^
../src/HW1.c:49:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("H ",env[j][k]);
     ^
../src/HW1.c: In function ‘findNearestMove’:
../src/HW1.c:282:8: warning: unused variable ‘k’ [-Wunused-variable]
  int j,k;
        ^
../src/HW1.c:282:6: warning: unused variable ‘j’ [-Wunused-variable]
  int j,k;
      ^
../src/HW1.c: In function ‘runHunterPlan’:
../src/HW1.c:433:10: warning: unused variable ‘l’ [-Wunused-variable]
  int j,k,l;
          ^
../src/HW1.c: In function ‘main’:
../src/HW1.c:1017:2: warning: statement with no effect [-Wunused-value]
  env;
  ^
../src/HW1.c: At top level:
../src/HW1.c:16:12: warning: ‘UP’ defined but not used [-Wunused-variable]
 static int UP = 5;
            ^
../src/HW1.c:17:12: warning: ‘LEFT’ defined but not used [-Wunused-variable]
 static int LEFT = 6;
            ^
../src/HW1.c:18:12: warning: ‘DOWN’ defined but not used [-Wunused-variable]
 static int DOWN = 7;
            ^
../src/HW1.c:19:12: warning: ‘RIGHT’ defined but not used [-Wunused-variable]
 static int RIGHT = 8;
            ^
../src/HW1.c:20:12: warning: ‘STAY_STILL’ defined but not used [-Wunused-variable]
 static int STAY_STILL = 9;
            ^
Finished building: ../src/HW1.c
 
Building target: HW1
Invoking: GCC C Linker
gcc  -o "HW1"  ./src/HW1.o   
Finished building target: HW1
 
21:26:12 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘printEnv’:
../src/HW1.c:42:7: error: ‘env’ undeclared (first use in this function)
    if(env[j][k] == EMPTY)
       ^
../src/HW1.c:42:7: note: each undeclared identifier is reported only once for each function it appears in
../src/HW1.c: In function ‘runPreyPlan’:
../src/HW1.c:106:30: error: ‘env’ undeclared (first use in this function)
   if(preys[j].indx-1 >= 0 && env[preys[j].indx-1][preys[j].indy] != OBSTACLE && env[preys[j].indx-1][preys[j].indy] != HUNTER
                              ^
../src/HW1.c: In function ‘findFarestMove’:
../src/HW1.c:204:27: error: ‘env’ undeclared (first use in this function)
  if(hunter.indx-1 >= 0 && env[hunter.indx-1][hunter.indy] != OBSTACLE && env[hunter.indx-1][hunter.indy] != HUNTER
                           ^
../src/HW1.c: In function ‘findNearestMove’:
../src/HW1.c:288:27: error: ‘env’ undeclared (first use in this function)
  if(hunter.indx-1 >= 0 && env[hunter.indx-1][hunter.indy] != OBSTACLE && env[hunter.indx-1][hunter.indy] != HUNTER
                           ^
../src/HW1.c:282:8: warning: unused variable ‘k’ [-Wunused-variable]
  int j,k;
        ^
../src/HW1.c:282:6: warning: unused variable ‘j’ [-Wunused-variable]
  int j,k;
      ^
../src/HW1.c: In function ‘removePreysOrHunters’:
../src/HW1.c:382:5: error: ‘env’ undeclared (first use in this function)
     env[preys[j].indx][preys[j].indy] = EMPTY;
     ^
../src/HW1.c: In function ‘runHunterPlan’:
../src/HW1.c:433:10: warning: unused variable ‘l’ [-Wunused-variable]
  int j,k,l;
          ^
../src/HW1.c: In function ‘runReactiveMultiAgentPlan’:
../src/HW1.c:758:7: error: ‘env’ undeclared (first use in this function)
    if(env[decisionHunters[j].indx][decisionHunters[j].indy] == OBSTACLE) {
       ^
../src/HW1.c: At top level:
../src/HW1.c:16:12: warning: ‘UP’ defined but not used [-Wunused-variable]
 static int UP = 5;
            ^
../src/HW1.c:17:12: warning: ‘LEFT’ defined but not used [-Wunused-variable]
 static int LEFT = 6;
            ^
../src/HW1.c:18:12: warning: ‘DOWN’ defined but not used [-Wunused-variable]
 static int DOWN = 7;
            ^
../src/HW1.c:19:12: warning: ‘RIGHT’ defined but not used [-Wunused-variable]
 static int RIGHT = 8;
            ^
../src/HW1.c:20:12: warning: ‘STAY_STILL’ defined but not used [-Wunused-variable]
 static int STAY_STILL = 9;
            ^
make: *** [src/HW1.o] Error 1
21:27:46 **** Incremental Build of configuration Debug for project HW1 ****
make all 
Building file: ../src/HW1.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/HW1.d" -MT"src/HW1.d" -o "src/HW1.o" "../src/HW1.c"
../src/HW1.c: In function ‘printEnv’:
../src/HW1.c:43:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("- ",grid_map[j][k]);
     ^
../src/HW1.c:45:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("X ",grid_map[j][k]);
     ^
../src/HW1.c:47:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("P ",grid_map[j][k]);
     ^
../src/HW1.c:49:5: warning: too many arguments for format [-Wformat-extra-args]
     printf("H ",grid_map[j][k]);
     ^
../src/HW1.c: In function ‘findNearestMove’:
../src/HW1.c:282:8: warning: unused variable ‘k’ [-Wunused-variable]
  int j,k;
        ^
../src/HW1.c:282:6: warning: unused variable ‘j’ [-Wunused-variable]
  int j,k;
      ^
../src/HW1.c: In function ‘runHunterPlan’:
../src/HW1.c:433:10: warning: unused variable ‘l’ [-Wunused-variable]
  int j,k,l;
          ^
../src/HW1.c: At top level:
../src/HW1.c:16:12: warning: ‘UP’ defined but not used [-Wunused-variable]
 static int UP = 5;
            ^
../src/HW1.c:17:12: warning: ‘LEFT’ defined but not used [-Wunused-variable]
 static int LEFT = 6;
            ^
../src/HW1.c:18:12: warning: ‘DOWN’ defined but not used [-Wunused-variable]
 static int DOWN = 7;
            ^
../src/HW1.c:19:12: warning: ‘RIGHT’ defined but not used [-Wunused-variable]
 static int RIGHT = 8;
            ^
../src/HW1.c:20:12: warning: ‘STAY_STILL’ defined but not used [-Wunused-variable]
 static int STAY_STILL = 9;
            ^
Finished building: ../src/HW1.c
 
Building target: HW1
Invoking: GCC C Linker
gcc  -o "HW1"  ./src/HW1.o   
Finished building target: HW1
 
